📱 Responsive rules for font size

--- a/assets/css/base.postcss
+++ b/assets/css/base.postcss
@@ -12,18 +12,19 @@ html {
 }
 
 h1 {
-  @apply text-xl;
+  @apply text-xl md:text-xl;
   font-family: "poppins-bold";
 }
 h2 {
-  @apply text-lg;
+  @apply text-sm md:text-lg;
   font-family: "opensans-light";
 }
 h3 {
+  @apply text-sm md:text-base;
   font-family: "opensans-regular";
 }
 h4 {
-  @apply text-xs uppercase;
+  @apply text-2xs md:text-xs uppercase;
 }
 
 /* 📈 Scrollbar */
