💄 Mobile UI adjustments

--- a/assets/css/base.postcss
+++ b/assets/css/base.postcss
@@ -12,11 +12,11 @@ html {
 }
 
 h1 {
-  @apply text-xl md:text-xl;
+  @apply text-xl;
   font-family: "poppins-bold";
 }
 h2 {
-  @apply text-sm md:text-lg;
+  @apply text-base md:text-lg;
   font-family: "opensans-light";
 }
 h3 {
@@ -24,7 +24,7 @@ h3 {
   font-family: "opensans-regular";
 }
 h4 {
-  @apply text-2xs md:text-xs uppercase;
+  @apply text-xs uppercase;
 }
 
 /* 📈 Scrollbar */
