💄 Hide scrollbar on mobile

--- a/assets/css/base.postcss
+++ b/assets/css/base.postcss
@@ -30,7 +30,7 @@ h4 {
 /* 📈 Scrollbar */
 /* width */
 ::-webkit-scrollbar {
-  @apply w-2;
+  @apply w-0 md:w-2;
 }
 /* Track */
 ::-webkit-scrollbar-track {
