⬆️ Revamped upgrade to Nuxt 4

--- a/assets/css/base.postcss
+++ b/assets/css/base.postcss
@@ -85,23 +85,23 @@ h4 {
   font-family: 'poppins-bold';
   font-display: swap;
   src: local(''),
-       url('../../static/fonts/poppins/poppins-v15-latin-700.woff2') format('woff2'),
-       url('../../static/fonts/poppins/poppins-v15-latin-700.woff') format('woff'),
-       url('../../static/fonts/poppins/poppins-v15-latin-700.ttf') format('truetype');
+       url('@/assets/fonts/poppins/poppins-v15-latin-700.woff2') format('woff2'),
+       url('@/assets/fonts/poppins/poppins-v15-latin-700.woff') format('woff'),
+       url('@/assets/fonts/poppins/poppins-v15-latin-700.ttf') format('truetype');
 }
 @font-face {
   font-family: 'opensans-regular';
   font-display: swap;
   src: local(''),
-    url('../../static/fonts/opensans/open-sans-v18-latin-regular.woff2') format('woff2'),
-    url('../../static/fonts/opensans/open-sans-v18-latin-regular.woff') format('woff'),
-    url('../../static/fonts/opensans/open-sans-v18-latin-regular.ttf') format('truetype');
+    url('@/assets/fonts/opensans/open-sans-v18-latin-regular.woff2') format('woff2'),
+    url('@/assets/fonts/opensans/open-sans-v18-latin-regular.woff') format('woff'),
+    url('@/assets/fonts/opensans/open-sans-v18-latin-regular.ttf') format('truetype');
 }
 @font-face {
   font-family: 'opensans-light';
   font-display: swap;
   src: local(''),
-    url('../../static/fonts/opensans/open-sans-v18-latin-300.woff2') format('woff2'),
-    url('../../static/fonts/opensans/open-sans-v18-latin-300.woff') format('woff'),
-    url('../../static/fonts/opensans/open-sans-v18-latin-300.ttf') format('truetype');
+    url('@/assets/fonts/opensans/open-sans-v18-latin-300.woff2') format('woff2'),
+    url('@/assets/fonts/opensans/open-sans-v18-latin-300.woff') format('woff'),
+    url('@/assets/fonts/opensans/open-sans-v18-latin-300.ttf') format('truetype');
 }
